asm_tests/other_testfiles/valid_files/moro.s
.name "MORO"
.comment "MORJESTAAAA!"

hihii:
hihii1:
hihii2:

		live %:hihii1
hihii:
		ld %12, r2
		live %:hihii
		ld 12, r16

