asm_tests/other_testfiles/invalid_files/error21.s
.name MORO"
.comment "MORJESTA!"

sti r1, r2, r3
